--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#4d80fa" />
-    <meta name="description" content="SSHOC Marketplace" />
+    <meta
+      name="description"
+      content="Social Sciences & Humanities Open Marketplace"
+    />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SSHOC Marketplace</title>
+    <title>Social Sciences & Humanities Open Marketplace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
