--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,35 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Social Sciences & Humanities Open Marketplace</title>
+    <script type="text/javascript">
+      if (
+        '%NODE_ENV%' === 'production' &&
+        '%REACT_APP_MATOMO_BASE_URL%' &&
+        '%REACT_APP_MATOMO_BASE_URL%'.indexOf('REACT_APP_MATOMO_BASE_URL') ===
+          -1 &&
+        '%REACT_APP_MATOMO_SITE_ID%' &&
+        '%REACT_APP_MATOMO_SITE_ID%'.indexOf('REACT_APP_MATOMO_SITE_ID') === -1
+      ) {
+        var _paq = window._paq || []
+        // _paq.push(["requireConsent"]);
+        _paq.push(['disableCookies']) // disable as long as we don't have a consent form
+        _paq.push(['setSecureCookie', true])
+        _paq.push(['enableHeartBeatTimer'])
+        ;(function() {
+          var u = '%REACT_APP_MATOMO_BASE_URL%'
+          _paq.push(['setTrackerUrl', u + 'matomo.php'])
+          _paq.push(['setSiteId', '%REACT_APP_MATOMO_SITE_ID%'])
+          var d = document,
+            g = d.createElement('script'),
+            s = d.getElementsByTagName('script')[0]
+          g.type = 'text/javascript'
+          g.async = true
+          g.defer = true
+          g.src = u + 'matomo.js'
+          s.parentNode.insertBefore(g, s)
+        })()
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
