--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
           g.type = 'text/javascript'
           g.async = true
           g.defer = true
+          g.crossOrigin = true
           g.src = u + 'matomo.js'
           s.parentNode.insertBefore(g, s)
         })()
